ECBackend::ReadOp: fill in complete in constructor, not in do_read_op

Otherwise, send_all_remaining_reads creates duplicate entries.

Fixes: http://tracker.ceph.com/issues/17966
Signed-off-by: Samuel Just <sjust@redhat.com>